Add test images, fix README

--- a/app/simple_image_viewer.html
+++ b/app/simple_image_viewer.html
@@ -5,6 +5,6 @@
   <link rel="stylesheet" href="./css/siv.css">
 </head>
 <body>
-  <script src="./lib/siv.js"></script>
+  <script src="./js/siv.js"></script>
 </body>
 </html>
