Change repository name Siv => Sib

--- a/app/simple_image_browser.html
+++ b/app/simple_image_browser.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./css/siv.css">
+  <link rel="stylesheet" href="./css/sib.css">
 </head>
 <body>
-  <script src="./js/siv.js"></script>
+  <script src="./js/sib.js"></script>
 </body>
 </html>
